<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <com.application.zapplonmerchant.utils.TextViewItalics
            android:id="@+id/old_password_header"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="@dimen/size10"
            android:layout_marginRight="@dimen/size10"
            android:layout_marginTop="@dimen/size10"
            android:gravity="left|center_vertical"
            android:padding="@dimen/size10"
            android:text="@string/old_password"
            android:textColor="@color/zdhl2"
            android:textSize="@dimen/size16" />

        <com.application.zapplonmerchant.utils.EditTextRegular
            android:id="@+id/old_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/size10"
            android:layout_marginLeft="@dimen/size10"
            android:layout_marginRight="@dimen/size10"
            android:background="@drawable/edittext_zhl_rounded"
            android:gravity="left|center_vertical"
            android:hint="@string/old_password_hint"
            android:inputType="textPassword"
            android:padding="@dimen/size10"
            android:textColor="@color/zhl_darkest"
            android:textSize="@dimen/size16" />

        <com.application.zapplonmerchant.utils.TextViewItalics
            android:id="@+id/password_header"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/size10"
            android:layout_marginRight="@dimen/size10"
            android:layout_marginTop="@dimen/size10"
            android:gravity="left|center_vertical"
            android:padding="@dimen/size10"
            android:text="@string/new_password"
            android:textColor="@color/zdhl2"
            android:textSize="@dimen/size16" />

        <com.application.zapplonmerchant.utils.EditTextRegular
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/size10"
            android:layout_marginLeft="@dimen/size10"
            android:layout_marginRight="@dimen/size10"
            android:background="@drawable/edittext_zhl_rounded"
            android:gravity="left|center_vertical"
            android:hint="@string/new_password_hint"
            android:inputType="textPassword"
            android:padding="@dimen/size10"
            android:textColor="@color/zhl_darkest"
            android:textSize="@dimen/size16" />

        <com.application.zapplonmerchant.utils.TextViewItalics
            android:id="@+id/confirm_password_header"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/size10"
            android:layout_marginRight="@dimen/size10"
            android:layout_marginTop="@dimen/size10"
            android:gravity="left|center_vertical"
            android:padding="@dimen/size10"
            android:text="@string/confirm_password"
            android:textColor="@color/zdhl2"
            android:textSize="@dimen/size16" />

        <com.application.zapplonmerchant.utils.EditTextRegular
            android:id="@+id/confirm_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/size10"
            android:layout_marginLeft="@dimen/size10"
            android:layout_marginRight="@dimen/size10"
            android:background="@drawable/edittext_zhl_rounded"
            android:gravity="left|center_vertical"
            android:hint="@string/confirm_password_hint"
            android:inputType="textPassword"
            android:padding="@dimen/size10"
            android:textColor="@color/zhl_darkest"
            android:textSize="@dimen/size16" />

        <com.application.zapplonmerchant.utils.TextViewBold
            android:id="@+id/submit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_margin="@dimen/size10"
            android:background="@drawable/zapplon_dark_feedback"
            android:clickable="true"
            android:gravity="center"
            android:padding="@dimen/size10"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textSize="@dimen/size16" />
    </LinearLayout>

</ScrollView>